# netconfeval

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docker/netconfeval-paper/: Dockerfile  README.md  compose.yaml  requirements.txt
docker/netconfeval-paper/scripts/: ensure_upstream.sh  level3_thinking_probe.py  patch_deepseek_model.py  run_smoke.sh  run_step1_function_call.sh  run_step1_translation.sh  run_step2_code_gen.sh
experiments/netconfeval-paper/legacy-upstream-probes-20260614-25/: README.md
experiments/netconfeval-paper/level0-20260625-234353/: commands.sh  env_summary.md  reproduction_summary.md
experiments/netconfeval-paper/level1-2-20260626-001054/: commands.sh  level1_summary.md  level2_summary.md  reproduction_summary.md
experiments/netconfeval-paper/level3-20260626-002509/: commands.sh  failure_analysis.md  level3_summary.md  thinking_comparison.md
research/: __init__.py  netconfeval-reproduction-20260614.md  netconfeval_step1_faithful.py
research/legacy/netconfeval_smoke_20260614/: README.md  netconfeval_runner.py
research/netconfeval_repro/: README.md  __init__.py  paths.py
research/netconfeval_repro/adapters/: __init__.py  base.py  openai_compatible.py
research/netconfeval_repro/datasets/: __init__.py  step1.py
research/netconfeval_repro/runners/: __init__.py  step1_translation.py
research/netconfeval_repro/scorers/: __init__.py  step1.py
research/netconfeval_repro/verifiers/: __init__.py
tests/: test_public_checkout.py
tests/research/: test_netconfeval_repro_step1.py
(+29 files in other folders)
